<resources>
    <string name="app_name">JerryStore</string>
    <string name="hi_jerry">Hi, Jerry 👋🏻</string>
    <string name="which_tom_do_you_want_to_buy">Which Tom do you want to buy?</string>
    <string name="number_three">3</string>
    <string name="notification_button">Notification Button</string>
    <string name="profile">Profile</string>
    <string name="search_about_tom">Search about tom ...</string>
    <string name="filter_button">Filter Button</string>
    <string name="promotion_details">Adopt Tom! (Free Fail-Free Guarantee)</string>
    <string name="promotion_title">Buy 1 Tom and get 2 for free</string>
    <string name="banner_image">Banner Image</string>
    <string name="cheap_tom_section">Cheap tom section</string>
    <string name="view_all">View all</string>
    <string name="_5"> <strike>5</strike> </string>
    <string name="he_runs_1_meter_trips_over_his_boot">He runs 1 meter... trips over his boot.</string>
    <string name="sport_tom">Sport Tom</string>
    <string name="description2">He loves one-sidedly... and is beaten by the other side.</string>
    <string name="title2">Tom the lover</string>
    <string name="money_icon">money icon</string>
    <string name="_3_cheeses">3 cheeses</string>


</resources>