<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF4F6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- App Bar -->
    <LinearLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/img_profile" />

        <!-- App Bar Info -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4.5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_sans_arabic_medium"
                android:text="@string/hi_jerry"
                android:textColor="#1F1F1E"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ibm_plex_sans_arabic_regular"
                android:text="@string/which_tom_do_you_want_to_buy"
                android:textColor="#A5A6A4"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <!-- Notification Icon Button With Badge -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginEnd="18dp">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/my_icon_button_with_border"
                android:contentDescription="@string/notification_button"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@drawable/badge_background"
                android:fontFamily="@font/ibm_plex_sans_arabic_medium"
                android:gravity="center"
                android:text="@string/number_three"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <!-- Search Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/appBar"

        tools:ignore="MissingConstraints">

        <EditText
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_12"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:drawableTint="#969799"
            android:hint="@string/search_about_tom"
            android:inputType="text"
            android:padding="12dp" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/my_icon_button_normal"
            android:contentDescription="@string/filter_button"
            android:src="@drawable/ic_filter" />

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>